--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Spaceman</title>
+		<title>Space Earth</title>
     <!--Main CSS-->
 		<link rel = "stylesheet" href = "style.css">
 	</head>
@@ -16,8 +16,7 @@
 			<canvas id="pixie"></canvas>
 			<canvas id="bgCanvas"></canvas>
 			<canvas id="myCanvas"></canvas>
-<!--			<canvas id="blink"></canvas>-->
-
+			<canvas id="drums"></canvas>
 			<p><a href=# onclick="goFullScreen();">Go Fullscreen</a></p>
 		</div>
 		<script src ="MooTools-Core-1.6.0.js"></script>
@@ -27,7 +26,6 @@
 		<script src = "FullScreen.js"></script>
 		<script src = "Streak.js"></script>
 		<script src = "fog.js"></script>
-<!--		<script src = "blink.js"></script>-->
-
+		<script src = "drums.js"></script>
 	</body>
 </html>
